Configured enabled/disabled and some stuff about authorities